# weeablind

./: pyproject.toml
weeablind/: __main__.py  app_state.py  diarize.py  dub_line.py  synth.py  test.py  utils.py  video.py  weeablind.py
weeablind/tabs/: ConfigureVoiceTab.py  ListStreams.py  SubtitlesTab.py
